--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,4 +15,36 @@ h1{
     color: #E55473;
 }
 
-/* Banner style */
+/* Navigation style */
+
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color:white;
+    height: 120px;
+}
+.logo img{
+    width: 200px;
+}
+.menus ul{
+    display: flex;
+}
+.menus li{
+    list-style: none;
+    padding:10px 20px;
+}
+.menus li a{
+    text-decoration: none;
+    color: rgb(41, 40, 40);
+    font-size: 16px;
+    font-weight: 600;
+}
+.menus li a:hover{
+    background-color:#E55473;
+    color: white;
+    border-radius: 5px;
+    padding: 2px 2px;    
+}
+
