--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,15 +8,14 @@ body{
 }
 
 .btn-primary{
+    border: 0;
     border-radius: 8px;
-    background: #E55473;    
-}
-h1{
-    color: #E55473;
+    background: #E55473;
+    padding: 10px 20px;
+    cursor: pointer;    
 }
 
 /* Navigation style */
-
 
 nav{
     display: flex;
@@ -48,3 +47,36 @@ nav{
     padding: 2px 2px;    
 }
 
+/* Banner Style */
+.banner{
+    background-color: rgba(229, 84, 115, 0.10);
+    height: 500px;
+
+}
+.banner-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 150px;
+    gap: 50px;
+}
+.banner-content{
+    padding-top: 100px;
+}
+.banner-title{
+    font-size: 55px;
+    font-weight: 900;
+    color: black;
+    padding-bottom: 10px;
+}
+.banner-desc{
+    padding-bottom: 10px;
+}
+.banner-image{
+    position: relative;
+    top: 50px;
+}
+.banner-image img{
+    width: 350px;
+
+}
