--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,3 +166,25 @@ margin-top: 100px;
 .small-banner-desc{
     font-size: 14px;
 }
+.hotdeal{
+    margin-top: 100px;
+    background-color: rgba(229, 84, 115, 0.05);
+}
+.hotdeal-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 800px;
+}
+.hotdeal-content{
+    text-align: center;
+}
+.hotdeal-title{
+    padding-bottom: 10px;
+}
+.hotdeal-desc{
+    padding-bottom: 10px;
+}
+.hotdeal-image img{
+    width: 220px;
+}
